<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/nav_settings" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_about"
            android:title="@string/nav_about" />
        <item
            android:id="@+id/nav_export"
            android:icon="@android:drawable/ic_menu_save"
            android:title="@string/export_notes" />
        <item
            android:id="@+id/nav_import"
            android:icon="@android:drawable/ic_menu_upload"
            android:title="@string/import_notes" />
    </group>
</menu>